// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoForm renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="modal-body"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label"
        htmlFor="taskName"
      >
        Task name
        : 
        
      </label>
      <input
        className="form-control"
        id="taskName"
        name="name"
        onChange={[Function]}
        placeholder="Task name..."
        type="text"
        value=""
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        type="submit"
      >
        Save
      </button>
    </div>
  </div>
</form>
`;

exports[`TodoForm when name is invalid renders form with validation error 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="modal-body"
  >
    <div
      className="form-group has-error"
    >
      <label
        className="control-label"
        htmlFor="taskName"
      >
        Task name
        : 
        qwe
      </label>
      <input
        className="form-control"
        id="taskName"
        name="name"
        onChange={[Function]}
        placeholder="Task name..."
        type="text"
        value="qwe"
      />
    </div>
    <div
      className="modal-footer"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        type="submit"
      >
        Save
      </button>
    </div>
  </div>
</form>
`;
